--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-touch": "^1.4.0",
     "angular-ui-router": "^0.2.18",
     "angular-material": "^1.0.8",
-    "angular-material-icons": "^0.7.0"
+    "material-design-icons": "^2.2.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
